--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
   <body>
-    <h1> KJ Klamer</h1>
+    <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
+    <h1>KJ Klamer</h1>
   <body>
