--- a/index.html
+++ b/index.html
@@ -2,4 +2,15 @@
   <body>
     <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
     <h1>KJ Klamer</h1>
+    <p style="text-align: right; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
+      <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
+      At Lewis and Clark I am in the Computer Software Development class with my teacher, 
+      <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
+      games I've created I dabble in graphic design with the use of photoshop, lightroom 
+      <br><br>and sometimes gimp. I also take photos and videos that I edit myself.<br><br>
+      I along work at dierbergs and currently am a bagger there. In all, I feel like 
+      <br><br>I have accomplishments but unfortuantly I have been slacking off in my <br><br>
+      Lewis Class and I am trying to make up for my mistakes. 
+      <br><br>I'm better than that. Thank you for taking the time to read.
+    </p>
   <body>
