modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
     <h1>KJ Klamer</h1>
-    <p style="text-align: right; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
+    <p style="text-align: left; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
       <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
       At Lewis and Clark I am in the Computer Software Development class with my teacher, 
       <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
