unstable changes to the main website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <div class="item1">
         <ul>
           <h1 style="font-size: 25px; color: white; float: left; margin-right: 300px;">KJ Klamer</h1>
-          <!--<li><a href="#main">KJ Klamer</a></li>-->
           <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="#about">About</a></li>
@@ -31,6 +30,9 @@
           Lewis Class and I am trying to make up for my mistakes. 
           <br><br>I'm better than that. Thank you for taking the time to read.
         </p>
+      </div>
+      <div class="item5">
+        <h1 style="color: #A274FF;">hi</h1>
       </div>
     </div>
   <body>
