rework to flex box

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <head>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body>
-    <div class="grid-container">
-      <div class="item1">
+  <body>   
+    <div class="item1">
         <ul>
           <h1 style="font-size: 25px; color: white; float: left; margin-right: 300px;">KJ Klamer</h1>
           <li><a href="#resume">Resume</a></li>
@@ -16,21 +15,23 @@
           <li><a href="#about">About</a></li>
         </ul>
       </div>
-      <div class="item3">
-        <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
+    <div class="container container--main">
+      <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
+      <header class="mainheader">
         <h1>About Me</h1>
         <p style="text-align: left; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
-          <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
-          At Lewis and Clark I am in the Computer Software Development class with my teacher, 
-          <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
-          games I've created I dabble in graphic design with the use of photoshop, lightroom 
-          <br><br>and sometimes gimp. I also take photos and videos that I edit myself.<br><br>
-          I along work at dierbergs and currently am a bagger there. In all, I feel like 
-          <br><br>I have accomplishments but unfortuantly I have been slacking off in my <br><br>
-          Lewis Class and I am trying to make up for my mistakes. 
-          <br><br>I'm better than that. Thank you for taking the time to read.
+        <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
+        At Lewis and Clark I am in the Computer Software Development class with my teacher, 
+        <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
+        games I've created. I also dabble in graphic design with the use of photoshop, lightroom 
+        <br><br>and sometimes gimp. I take photos and videos also and I edit them myself.<br><br>
+        In addition, I work at dierbergs and currently am a bagger there. In all, I feel like 
+        <br><br>I have accomplishments but unfortuantly I have been slacking off in my <br><br>
+        Lewis Class and I am trying to make up for my mistakes because
+        <br><br>I'm better than that. Thank you for taking the time to read.
         </p>
-      </div>
+      </header>
+    </div>
       <div class="item5">
         <h1 style="color: #A274FF;">hi</h1>
       </div>
