--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         </ul>
       </div>
     <div class="container container--main">
-      <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:600px;height: 430px; float:left;padding-right: 10px;">
+      <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:500px;height: 430px; float:left;padding-right: 10px;"
+      class="main__img">
       <header class="mainheader">
-        <h1>About Me</h1>
-        <p style="text-align: left; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
-        <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
-        At Lewis and Clark I am in the Computer Software Development class with my teacher, 
-        <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
-        games I've created. I also dabble in graphic design with the use of photoshop, lightroom 
-        <br><br>and sometimes gimp. I take photos and videos also and I edit them myself.<br><br>
-        In addition, I work at dierbergs and currently am a bagger there. In all, I feel like 
-        <br><br>I have accomplishments but unfortuantly I have been slacking off in my <br><br>
-        Lewis Class and I am trying to make up for my mistakes because
-        <br><br>I'm better than that. Thank you for taking the time to read.
-        </p>
+          <h1>About Me</h1>
+          <p style="text-align: center; font-size: large; clear: both; 
+          transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) 
+          rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;">Hi my name is KJ Klamer and I am currently a student 
+          <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
+          At Lewis and Clark I am in the Computer Software Development class with my teacher, 
+          <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
+          games I've created. I also dabble in graphic design with the use of photoshop, lightroom 
+          <br><br>and sometimes gimp. I take photos and videos also and I edit them myself.<br><br>
+          In addition, I work at dierbergs and currently am a bagger there. In all, I feel like 
+          <br><br>I have accomplishments but unfortuantly I have been slacking off in my <br><br>
+          Lewis Class and I am trying to make up for my mistakes because
+          <br><br>I'm better than that. Thank you for taking the time to read.
+          </p>
       </header>
     </div>
-      <div class="item5">
-        <h1 style="color: #A274FF;">hi</h1>
-      </div>
     </div>
   <body>
