--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>   
-    <div class="item1">
-        <ul>
-          <h1 style="font-size: 25px; color: white; float: left; margin-right: 300px;">KJ Klamer</h1>
-          <li><a href="#resume">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#about">About</a></li>
-        </ul>
-      </div>
+    <div>
+      <ul>
+        <h1 style="font-size: 25px; color: white; float: left; margin-right: 500px;">KJ Klamer</h1>
+        <li style="margin-left: 8%;"><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
     <div class="container container--main">
-      <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:500px;height: 430px; float:left;padding-right: 10px;"
+      <img src="myselfmaroon.JPG" alt="A Picture of Myself" style="width:400px;height: 430px;"
       class="main__img">
       <header class="mainheader">
-          <h1>About Me</h1>
-          <p style="text-align: center; font-size: large; clear: both; 
-          transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) 
-          rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;">Hi my name is KJ Klamer and I am currently a student 
+        <div class="mainposition">
+          <h1 style="text-align: center;">About Me</h1>
+          <p style="text-align: center; font-size: large;">Hi my name is KJ Klamer and I am currently a student 
           <br><br>at Francis Howell Central Highschool and Lewis and Clark Career Center.<br><br>
           At Lewis and Clark I am in the Computer Software Development class with my teacher, 
           <br><br>Mr. Schmidt. Along with the creation of websites and little coded<br><br>
@@ -33,6 +32,7 @@
           Lewis Class and I am trying to make up for my mistakes because
           <br><br>I'm better than that. Thank you for taking the time to read.
           </p>
+        </div>
       </header>
     </div>
     </div>
