modified:   index.html

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <div class="projects-list-wrapper w-dyn-list">
           <div role="list" class="projects-list-grid w-dyn-items">
             <div role="listitem" class="projects-list__item w-dyn-item">
-              <a href="#" class="projects-list-item-wrap w-inline-block">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" projects-list-item-wrap w-inline-block">
                 <img src="case1.png" alt="Screenshot of Webkit Case 1" class="card projects-list__img">
               </a>
             </div>
             <div role="listitem" class="projects-list__item w-dyn-item">
-              <a href="#" class="projects-list-item-wrap w-inline-block">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="projects-list-item-wrap w-inline-block">
                 <img src="case2.png" alt="Screenshot of Webkit Case 2" class="card projects-list__img">
               </a>
             </div>
             <div role="listitem" class="projects-list__item w-dyn-item">
-              <a href="#" class="projects-list-item-wrap w-inline-block">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="projects-list-item-wrap w-inline-block">
                 <img src="case4.png" alt="Screenshot of Webkit Case 4" class="card projects-list__img">
               </a>
             </div>
             <div role="listitem" class="projects-list__item w-dyn-item">
-              <a href="#" class="projects-list-item-wrap w-inline-block">
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="projects-list-item-wrap w-inline-block">
                 <img src="julytimer.png" alt="Screenshot of 4th of July Countdowntimer" class="card projects-list__img">
               </a>
             </div>
